[package]
name = "loco-protocol"
version = "2.0.0-rc.1"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
keywords = ["loco", "protocol"]
readme = "readme.md"
description = "Loco protocol implementation"
repository = "https://github.com/storycraft/loco-protocol-rs/"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[features]
wasm = ["getrandom", "getrandom/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
rsa = "0.4.0"
aes = "0.7.4"
block-modes = { version = "0.8.1", features = ["alloc"] }
rand = "0.8.4"
getrandom = { version = "0.2.3", optional = true }
sha-1 = "0.9.7"
