[package]
name = "loco-protocol"
version = "5.3.1"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
keywords = ["loco", "protocol"]
readme = "readme.md"
description = "Loco protocol implementation"
repository = "https://github.com/storycraft/loco-protocol-rs/"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[features]
wasm = ["getrandom", "getrandom/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
futures = "0.3.16"
rsa = "0.8.0"
libaes = "0.6.0"
rand = "0.8.4"
getrandom = { version = "0.2.3", optional = true }
sha-1 = "0.10.0"
