[package]
name = "loco-protocol"
version = "6.3.1"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
keywords = ["loco", "protocol"]
readme = "readme.md"
description = "Loco protocol implementation"
repository = "https://github.com/storycraft/loco-protocol-rs/"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[features]
wasm = ["getrandom", "getrandom/js"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
getrandom = { version = "0.2.3", optional = true }
aes = "0.8.3"
rsa = "0.9.2"
cfb-mode = "0.8.2"
sha1 = "0.10.5"
byte-order = "0.3.0"
arrayvec = "0.7.4"
